syntax = "proto3";
package userspb;
option go_package = "boilerplate/users/userspb";

import "google/protobuf/timestamp.proto";

service Users {
  rpc Signup(SignupRequest) returns (SignupResponse) {}
  rpc Lookup(LookupRequest) returns (User) {}
  rpc LookupForEmail(LookupRequest) returns (User) {}
  rpc LookupForPhone(LookupRequest) returns (User) {}
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
}

message SignupRequest {
  int32 type = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string ip = 5;
}

message SignupResponse {
  int64 id = 1;
}

message LookupRequest {
  int64 id = 1;
  int32 type = 2;

  oneof identifier {
    string email = 3;
    string phone = 4;
  }
}

message User {
  int64 id = 1;
  int32 type = 2;
  string email = 3;
  bool email_verified = 4;
  string phone = 5;
  bool phone_verified = 6;
  string password = 7;
  string signup_ip = 8;
  google.protobuf.Timestamp created_at = 9;
}

message RequestPasswordResetRequest {
  int32 user_type = 1;
  string email = 2;
  string phone = 3;
  string ip = 4;
  string user_agent = 5;
}

message RequestPasswordResetResponse {
  string grant_id = 1;
  google.protobuf.Timestamp next_otp_send = 2;
}

message ResetPasswordRequest {
  string grant_id = 1;
  string password = 2;
  string ip = 3;
  string otp = 4;
}

message ResetPasswordResponse {}
